Bug 498543 - Night light setting doesn't apply on second monitor
Summary: Night light setting doesn't apply on second monitor
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: night color (other bugs)
Version First Reported In: 6.2.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: multiscreen, regression
Depends on:
Blocks:
 
Reported: 2025-01-12 00:44 UTC by kostadinshishmanov
Modified: 2025-01-30 01:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kostadinshishmanov 2025-01-12 00:44:34 UTC
SUMMARY

On a fresh login, if you open the "Brightness and Colour" applet in the Panel on the MAIN monitor, and enable/disable Night Light, the change won't be reflected on the second monitor, unless you move the cursor outside of the applet popup.

The bug can't be reproduced after some time of using the session, but I have no idea what makes it go away.

STEPS TO REPRODUCE
1. Log in to a fresh KDE Plasma session
2. Enable/disable night light from the  "Brightness and Colour" applet in the Panel on the main monitor
3. Look at the second monitor - the night light setting change won't be reflected
4. Move the cursor outside of the "Brightness and Colour" applet popup.
5. Change gets reflected on second monitor too.

OBSERVED RESULT

Night light getting enabled/disabled is observed on both monitors 

EXPECTED RESULT

The night light change only gets observed on the main monitor until the cursor is moved outside of the "Brightness and Colour" applet popup

SOFTWARE/OS VERSIONS
Operating System: Gentoo 2.17
KDE Plasma Version: 6.2.90
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1
Kernel Version: 6.12.9-gentoo-dist (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7800X3D 8-Core Processor
Memory: 30.9 GiB of RAM
Graphics Processor: AMD Radeon RX 6800

ADDITIONAL INFORMATION

Main monitor is AOC 24G2SP 165Hz, secondary one is AOC 24G2 144Hz, both plugged in using DisplayPort
Comment 1 Bug Janitor Service 2025-01-29 20:13:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7093
Comment 2 Zamundaaa 2025-01-29 22:05:23 UTC
Git commit ed24d3da811ec79f415f687721c3fcf036c7e026 by Xaver Hugl.
Committed on 29/01/2025 at 21:31.
Pushed by zamundaaa into branch 'master'.

core/outputlayer: when repaints are added, schedule the frame for them

M  +1    -0    src/core/outputlayer.cpp

https://invent.kde.org/plasma/kwin/-/commit/ed24d3da811ec79f415f687721c3fcf036c7e026
Comment 3 Zamundaaa 2025-01-29 23:05:05 UTC
Git commit 9f8b9afa504c2592e93a866ae23f08a6ca946272 by Xaver Hugl.
Committed on 29/01/2025 at 22:05.
Pushed by zamundaaa into branch 'Plasma/6.3'.

core/outputlayer: when repaints are added, schedule the frame for them


(cherry picked from commit ed24d3da811ec79f415f687721c3fcf036c7e026)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +1    -0    src/core/outputlayer.cpp

https://invent.kde.org/plasma/kwin/-/commit/9f8b9afa504c2592e93a866ae23f08a6ca946272