core/outputlayer: when repaints are added, schedule the frame for them

BUG: 498543


(cherry picked from commit ed24d3da811ec79f415f687721c3fcf036c7e026)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>