src/core/outputlayer.cpp
@@ -50,6 +50,7 @@ QRegion OutputLayer::repaints() const
 void OutputLayer::addRepaint(const QRegion &region)
 {
     m_repaints += region;
+    m_output->renderLoop()->scheduleRepaint(nullptr, nullptr);
 }
 
 void OutputLayer::resetRepaints()
